--- a/projects/vs/sonia-prime/sonia-prime.vcxproj
+++ b/projects/vs/sonia-prime/sonia-prime.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="..\..\..\sonia\services\service_factory.hpp" />
     <ClInclude Include="..\..\..\sonia\services\service_locator.hpp" />
     <ClInclude Include="..\..\..\sonia\services\thread_descriptor.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\timer.hpp" />
     <ClInclude Include="..\..\..\sonia\services\transceiver\transceiver_builder.hpp" />
     <ClInclude Include="..\..\..\sonia\services\transceiver\transceiver_configuration.hpp" />
     <ClInclude Include="..\..\..\sonia\services\transceiver\transceiver_service.hpp" />
