start mpl research

--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -29,6 +29,11 @@
     <ClInclude Include="..\..\..\sonia\iterator_traits.hpp" />
     <ClInclude Include="..\..\..\sonia\logger\loggable.hpp" />
     <ClInclude Include="..\..\..\sonia\logger\logger.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\begin.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\fold.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\next.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\push_back.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\push_front.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\sequence.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\transform_view.hpp" />
     <ClInclude Include="..\..\..\sonia\net\http\application.hpp" />
