file based bookkeeper

--- a/projects/cmake/sonia-prime/CMakeLists.txt
+++ b/projects/cmake/sonia-prime/CMakeLists.txt
@@ -15,6 +15,8 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/services/local_service_registry.cpp
     ${BUNDLE_HOME}/sonia/services/registry/registry_service_builder.cpp
     ${BUNDLE_HOME}/sonia/services/registry/registry_service.cpp
+    ${BUNDLE_HOME}/sonia/services/bookkeeper/bookkeeper_service_builder.cpp
+    ${BUNDLE_HOME}/sonia/services/bookkeeper/bookkeeper_service.cpp
     ${BUNDLE_HOME}/sonia/services/scheduler/scheduler_service_builder.cpp
     ${BUNDLE_HOME}/sonia/services/scheduler/scheduler_service.cpp
     ${BUNDLE_HOME}/sonia/services/io/io_service_builder.cpp
