--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -30,17 +30,20 @@
     <ClInclude Include="..\..\..\sonia\logger\loggable.hpp" />
     <ClInclude Include="..\..\..\sonia\logger\logger.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\apply_wrap.hpp" />
-    <ClInclude Include="..\..\..\sonia\mpl\begin.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\bind.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\fold.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\lambda.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\less.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\next.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\plus.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\protect.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\push_back.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\push_front.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\quote.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\sequence.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\transform_view.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\vector.hpp" />
     <ClInclude Include="..\..\..\sonia\net\http\application.hpp" />
     <ClInclude Include="..\..\..\sonia\net\http\headers.hpp" />
     <ClInclude Include="..\..\..\sonia\net\http\http.hpp" />
