--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -29,8 +29,35 @@
     <ClInclude Include="..\..\..\sonia\iterator_traits.hpp" />
     <ClInclude Include="..\..\..\sonia\logger\loggable.hpp" />
     <ClInclude Include="..\..\..\sonia\logger\logger.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\apply.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\apply_wrap.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\as_vector.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\bind.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\boost_mpl.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\contains.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\equal.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\equal_to.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\find.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\find_if.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\fold.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\iterator.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\lambda.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\less.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\max_element.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\min_element.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\next.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\not_equal_to.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\plus.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\protect.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\push_back.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\push_front.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\quote.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\range_c.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\sequence.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\transform_view.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\unpack_args.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\vector.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\zip_view.hpp" />
     <ClInclude Include="..\..\..\sonia\net\http\application.hpp" />
     <ClInclude Include="..\..\..\sonia\net\http\headers.hpp" />
     <ClInclude Include="..\..\..\sonia\net\http\http.hpp" />
@@ -104,6 +131,7 @@
     <ClInclude Include="..\..\..\sonia\utility\caches\clock.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\caches\utility.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\concurrency\barrier.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\concurrency\debug_mutex.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\file_statable.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\file_statable.ipp" />
     <ClInclude Include="..\..\..\sonia\utility\functional\equal\variant.hpp" />
@@ -140,6 +168,7 @@
     <ClInclude Include="..\..\..\sonia\utility\iterators\hash_combine_iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\iterators\http_chunking_read_input_iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\iterators\http_chunking_write_input_iterator.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\iterators\http_form_data_read_iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\iterators\inflate_iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\iterators\chain_iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\iterators\iterator_of_ranges_with_limit.hpp" />
